--- a/loginDevmail.html
+++ b/loginDevmail.html
@@ -63,7 +63,7 @@ function check(form)/*function to check userid & password*/
  /*the following code checkes whether the entered userid and password are matching*/
  if(form.userid.value == "LCT_94$" && form.pswrd.value == "_password*")
   {
-    window.location.replace("http://stackoverflow.com")/*opens the target page while Id & password matches*/
+    window.location.replace("://https://cseriestechhero.github.io/devmail.lctapps/")/*opens the target page while Id & password matches*/
   }
  else
  {
